Removed PyCharm stuff.

--- a/src/sections/introduction.tex
+++ b/src/sections/introduction.tex
@@ -1,4 +1,4 @@
-This is a document for testing \LaTeX within PyCharm.\cite{small}
+This is a \LaTeX template document.\cite{small}
 
 \begin{figure}
     \centering
