--- a/src/sections/introduction.tex
+++ b/src/sections/introduction.tex
@@ -2,5 +2,5 @@ This is a \LaTeX template document.\cite{small}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\textwidth]{images/sample.jpg}
+    \includegraphics[width=0.5\textwidth]{example-image-a}
 \end{figure}
