Changed main.bib -> references.bib for tab-complete convenience.

--- a/src/main.tex
+++ b/src/main.tex
@@ -21,7 +21,7 @@
     \section{Introduction}
     \input{sections/introduction.tex}
 
-    \bibliography{main}
+    \bibliography{references}
     \bibliographystyle{plain}
 
 \end{document}
